--- a/README.org
+++ b/README.org
@@ -1,1 +1,7 @@
 #+title: Snowemacs
+
+** Functions To Run
+
+This package requires the fonts included with all-the-icons to be installed. Run *~M-x all-the-icons-install-fonts to do so.~*
+
+** Packages Installed
